--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,138 @@ ul {
 
 a {
   text-decoration: none;
-  color: inherit;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+header {
+  width: 100%;
+  height: 4.5rem;
+  background-color: var(--clr-body);
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 4.5rem;
+}
+
+.nav__logo {
+  font-family: var(--ff-secondary);
+  font-size: 2.25rem;
+  font-weight: 600;
+  color: var(--clr-secondary);
+}
+
+.nav__logo span {
+  font-size: 1rem;
+  position: absolute;
+  top: 1rem;
+  margin-left: 0.375rem;
+}
+
+.nav__toggle {
+  display: inline-flex;
+  font-size: 1.25rem;
+  cursor: pointer;
+}
+
+.nav__links {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  row-gap: 3rem;
+  padding-top: 9rem;
+}
+
+.nav__close {
+  color: var(--clr-body);
+}
+
+.nav__toggle {
+  color: var(--clr-secondary);
+}
+
+.nav__toggle,
+.nav__close {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.nav__link {
+  color: var(--clr-body);
+  text-transform: capitalize;
+  font-size: 1.25rem;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.nav__link:hover {
+  color: var(--clr-secondary);
+}
+
+.nav__close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.nav__close:hover {
+  color: var(--clr-secondary);
+}
+
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    background-color: var(--clr-primary);
+    backdrop-filter: blur(32px);
+    -webkit-backdrop-filter: blur(32px);
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    transition: 0.4s;
+  }
+}
+
+.show-menu {
+  right: 0;
+}
+
+@media screen and (min-width: 767px) {
+  .nav__close,
+  .nav__toggle {
+    display: none;
+  }
+
+  .nav__links {
+    padding-top: 0;
+    flex-direction: row;
+    column-gap: 3rem;
+  }
+
+  .nav__link {
+    position: relative;
+    color: var(--clr-secondary);
+    font-size: 1rem;
+    font-weight: 700;
+  }
 }
