--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,13 @@ img {
 header {
   width: 100%;
   height: 4.5rem;
-  background-color: var(--clr-body);
+  background-color: transparent;
   z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  transition: 0.4s;
 }
 
 .container {
@@ -128,6 +129,11 @@ header {
 
 .nav__close:hover {
   color: var(--clr-secondary);
+}
+
+.scrolled {
+  background-color: var(--clr-body);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
 }
 
 @media screen and (max-width: 767px) {
