feat[menu]: display menu and filter menu by category, responsive menu section

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,106 @@ header {
   width: 300px;
 }
 
+.menu__container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu__title {
+  text-align: center;
+  color: var(--clr-secondary);
+  font-size: 1.5rem;
+}
+
+.menu__lists {
+  position: relative;
+}
+
+.menu__lists ul {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 8px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.btn {
+  padding: 10px 12px;
+  font-size: 0.875rem;
+  outline: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: var(--clr-primary);
+}
+
+.active {
+  background-color: var(--clr-secondary);
+  color: var(--clr-body);
+  transition: 0.4s ease-in-out;
+}
+
+.menu__content {
+  display: flex;
+  width: 100%;
+  height: auto;
+  gap: 2rem;
+  flex-wrap: wrap;
+  margin-top: 3rem;
+}
+
+.card {
+  display: flex;
+  width: 100%;
+  cursor: pointer;
+}
+
+.card__img {
+  width: 92px;
+  height: 92px;
+}
+
+.card__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+
+.card__content {
+  flex: 1;
+  padding-left: 1.25rem;
+}
+
+.card__content h2 {
+  font-size: 1rem;
+  margin-bottom: 0.375rem;
+}
+
+.card__content span {
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: var(--clr-secondary);
+}
+
+.card__content p {
+  font-size: 0.75rem;
+  margin-top: 0.375rem;
+  color: var(--clr-primary);
+  font-weight: 300;
+  line-height: 1.6;
+  letter-spacing: 0.5px;
+}
+
+.hide {
+  display: none;
+}
+
 @media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
@@ -225,5 +325,71 @@ header {
 
   .hero__img {
     width: 80%;
+  }
+
+  .menu__container {
+    flex-direction: row;
+    margin-top: 60px;
+    justify-content: start;
+    align-items: start;
+  }
+
+  .menu__title {
+    font-size: 2.5rem;
+  }
+
+  .menu__lists ul {
+    flex-direction: column;
+    align-items: end;
+    width: 100%;
+    box-shadow: none;
+    border-radius: 1px;
+    overflow: hidden;
+  }
+
+  .btn {
+    padding: 10px 0;
+  }
+
+  .active {
+    background-color: transparent;
+    color: var(--clr-secondary);
+  }
+
+  .menu__item button {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+
+  .menu__content {
+    padding-left: 3rem;
+    margin-top: 0;
+  }
+
+  .card {
+    width: 48%;
+  }
+
+  .card__img {
+    width: 172px;
+    height: 172px;
+  }
+
+  .card__content {
+    padding-left: 1.75rem;
+  }
+
+  .card__content h2 {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+  }
+
+  .card__content span {
+    font-size: 1.125rem;
+  }
+
+  .card__content p {
+    font-size: 0.875rem;
+    margin-top: 1rem;
   }
 }
