--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 90px;
 }
 
 body {
@@ -168,18 +169,16 @@ header {
   width: 300px;
 }
 
+.menu {
+  margin-top: 5rem;
+}
+
 .menu__container {
   display: flex;
   flex-direction: column;
   margin-top: 2.5rem;
   justify-content: center;
   align-items: center;
-}
-
-.menu__title {
-  text-align: center;
-  color: var(--clr-secondary);
-  font-size: 2rem;
 }
 
 .menu__lists {
@@ -290,19 +289,84 @@ header {
 }
 
 .about__content h1 {
-  font-size: 2rem;
-  color: var(--clr-secondary);
-  text-align: center;
   margin-bottom: 1rem;
   margin-top: 1.5rem;
 }
 
 .about__content p {
-  font-size: 1rem;
+  font-size: 0.875rem;
   color: var(--clr-primary);
   font-weight: 400;
   line-height: 1.6;
   letter-spacing: 0.5px;
+}
+
+.title {
+  text-align: center;
+  color: var(--clr-secondary);
+  font-size: 2rem;
+}
+
+.border {
+  padding: 1.15rem;
+  border: 1px solid var(--clr-secondary);
+  border-radius: 0.875rem;
+}
+
+.icon {
+  margin-top: 3px;
+  margin-right: 0.5rem;
+  font-size: 1rem;
+  color: var(--clr-secondary);
+}
+
+.store {
+  margin-top: 5rem;
+}
+
+.store__container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  margin-top: 1.875rem;
+}
+
+.store__container .card__content p {
+  margin-top: 0;
+}
+
+.store__container .card__content {
+  padding-left: 0;
+}
+
+.store__content {
+  display: flex;
+}
+
+.store__content p:nth-child(2) {
+  margin-top: 0.75rem;
+  margin-bottom: 1rem;
+  color: var(--clr-secondary);
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+.store__container .card__content span {
+  font-size: 0.813rem;
+  margin-top: 2px;
+  font-weight: 400;
+  color: var(--clr-primary);
+}
+
+.store__container .card {
+  flex-direction: column;
+}
+
+.store__container .card__img {
+  width: 100%;
+  height: 180px;
+  margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 767px) {
@@ -364,15 +428,15 @@ header {
     width: 80%;
   }
 
+  .title {
+    font-size: 4rem;
+  }
+
   .menu__container {
     flex-direction: row;
     margin-top: 60px;
     justify-content: start;
     align-items: start;
-  }
-
-  .menu__title {
-    font-size: 4rem;
   }
 
   .menu__lists ul {
@@ -453,11 +517,30 @@ header {
     max-width: 50%;
   }
 
-  .about__content h1 {
-    font-size: 4rem;
+  .about__content p {
+    font-size: 1rem;
   }
 
-  .about__content p {
-    font-size: 1.15rem;
+  .store {
+    margin-top: 10rem;
+  }
+
+  .store__container {
+    flex-direction: row;
+    margin-top: 3.75rem;
+  }
+
+  .store__container .card {
+    flex-direction: row;
+  }
+
+  .store__container .card__img {
+    width: 172px;
+    height: 172px;
+    margin-bottom: 0;
+  }
+
+  .store__container .card__content {
+    padding-left: 1.25rem;
   }
 }
