feat[footer]: responsive footer, all done.

--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,89 @@ textarea {
   margin-top: 1rem;
 }
 
+footer {
+  background-color: #e2edec;
+  padding-bottom: 2rem;
+}
+
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1.5rem 2rem;
+  gap: 1rem;
+}
+
+.footer h1 {
+  color: var(--clr-secondary);
+  margin-bottom: 1rem;
+  font-family: var(--ff-secondary);
+  font-size: 3rem;
+  position: relative;
+  width: 100%;
+}
+
+.footer h1 span {
+  color: var(--clr-secondary);
+  position: absolute;
+  font-size: 1.5rem;
+  top: 0.5rem;
+  margin-left: 0.5rem;
+}
+
+.left {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.left .right,
+h2 {
+  font-size: 1rem;
+  margin-bottom: 0.75rem;
+  color: #1e4a3c;
+}
+
+.left__content {
+  display: flex;
+}
+
+.left__content p {
+  color: #1e4a3c;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+}
+
+.left__content p:nth-child(2) {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.right {
+  margin-top: 2.5rem;
+}
+
+.right p {
+  color: #1e4a3c;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+}
+
+.right p:nth-child(odd) {
+  margin-top: 1rem;
+}
+
+.copyright {
+  margin-top: 1rem;
+  border-top: 1px solid rgba(150, 174, 166, 0.295);
+}
+
+.copyright p {
+  color: #1e4a3c;
+  font-size: 0.75rem;
+  letter-spacing: 1px;
+  padding: 1.5rem 1.5rem;
+}
+
 @media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
@@ -683,5 +766,19 @@ textarea {
 
   .contact__form {
     padding: 0 2rem;
+  }
+
+  .footer {
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  .footer h1,
+  .left {
+    width: 50%;
+  }
+
+  .right {
+    margin-top: 0;
   }
 }
