--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ header {
 
 .contact__form {
   padding: 2rem 0;
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
 }
 
 .form {
@@ -628,6 +628,36 @@ h2 {
   color: #1e4a3c;
 }
 
+.biodata {
+  display: flex;
+  background-color: var(--clr-body);
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  border-radius: 0.5rem;
+  margin: 1.5rem 0 10rem 0;
+  overflow: hidden;
+}
+
+.data {
+  display: flex;
+  margin-top: 0.75rem;
+  font-size: 0.813rem;
+}
+
+.data label {
+  margin: 0 1rem 0 0;
+}
+
+.biodata__detail {
+  padding-left: 1rem;
+}
+
+.biodata img {
+  width: 120px;
+  height: 160px;
+  object-fit: cover;
+}
+
 @media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
@@ -807,6 +837,10 @@ h2 {
     margin-top: 10rem;
   }
 
+  .contact__form {
+    margin-bottom: 10rem;
+  }
+
   .contact > p {
     font-size: 1.125rem;
   }
@@ -852,5 +886,19 @@ h2 {
 
   .blog__content img {
     height: 400px;
+  }
+
+  .biodata img {
+    width: 300px;
+    height: 300px;
+  }
+
+  .biodata__detail {
+    padding: 2rem;
+  }
+
+  .data label,
+  p {
+    font-size: 1.125rem;
   }
 }
